--- a/manual/tex.tex
+++ b/manual/tex.tex
@@ -87,7 +87,7 @@ stands for \verb|horizontal| (default), \verb|vertical|,
 \verb|upsidedown|, or \verb|rvertical|. Additionally, any angle
 \verb|angle| (in degree) is allowed in \verb|direction(angle)|.
 \item[\texttt{color:}] stands for any \PyX{} color (see
-section~\ref{color}), default is \verb|color.grey.black|
+section~\ref{color}), default is \verb|color.gray.black|
 \item[\texttt{missextent:}] provides a routine, which is called when a
 requested extent is not yet available. In the following table a list
 of choises for this parameter is described:
