--- a/manual/manual.tex
+++ b/manual/manual.tex
@@ -22,4 +22,5 @@ Andr\'e Wobst \texttt{<wobsta@users.sourceforge.net>}}
 \appendix
 \include{mathtree}
 \include{colorname}
+\include{pathstyles}
 \end{document}
