end-a-line-with-comment fixed, draw->stroke fix
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@474 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/manual/tex.tex
+++ b/manual/tex.tex
@@ -223,33 +223,33 @@ t.text(0, -0.5, "Hello, world!", tex.fontsize.large)
 t.text(0, -1.5,
        r"\sum_{n=1}^{\infty} {1\over{n^2}} = {{\pi^2}\over 6}",
        tex.style.math)
-c.draw(path.line(5, -0.5, 9, -0.5))
-c.draw(path.line(5, -1, 9, -1))
-c.draw(path.line(5, -1.5, 9, -1.5))
-c.draw(path.line(7, -1.5, 7, 0))
+c.stroke(path.line(5, -0.5, 9, -0.5))
+c.stroke(path.line(5, -1, 9, -1))
+c.stroke(path.line(5, -1.5, 9, -1.5))
+c.stroke(path.line(7, -1.5, 7, 0))
 
 t.text(7, -0.5, "left aligned") # default is tex.halign.left
 t.text(7, -1, "center aligned", tex.halign.center)
 t.text(7, -1.5, "right aligned", tex.halign.right)
 
-c.draw(path.line(0, -4, 2, -4))
-c.draw(path.line(0, -2.5, 0, -5.5))
-c.draw(path.line(2, -2.5, 2, -5.5))
+c.stroke(path.line(0, -4, 2, -4))
+c.stroke(path.line(0, -2.5, 0, -5.5))
+c.stroke(path.line(2, -2.5, 2, -5.5))
 
 t.text(0, -4,
        "a b c d e f g h i j k l m n o p q r s t u v w x y z",
        tex.valign.top(2))
 
-c.draw(path.line(2.5, -4, 4.5, -4))
-c.draw(path.line(2.5, -2.5, 2.5, -5.5))
-c.draw(path.line(4.5, -2.5, 4.5, -5.5))
+c.stroke(path.line(2.5, -4, 4.5, -4))
+c.stroke(path.line(2.5, -2.5, 2.5, -5.5))
+c.stroke(path.line(4.5, -2.5, 4.5, -5.5))
 
 t.text(2.5, -4,
        "a b c d e f g h i j k l m n o p q r s t u v w x y z",
        tex.valign.bottom(2))
 
-c.draw(path.line(5, -4, 9, -4))
-c.draw(path.line(7, -5.5, 7, -2.5))
+c.stroke(path.line(5, -4, 9, -4))
+c.stroke(path.line(7, -5.5, 7, -2.5))
 
 t.text(7, -4, "horizontal")
 t.text(7, -4, "vertical", tex.direction.vertical)
