--- a/manual/manual.tex
+++ b/manual/manual.tex
@@ -15,6 +15,7 @@ Andr\'e Wobst \texttt{<wobsta@users.sourceforge.net>}}
 \include{path}
 \include{trafo} 
 \include{canvas}
+\include{epsfile}
 \include{tex}
 \include{color}
 \include{datafile}
