--- a/manual/pathstyles.tex
+++ b/manual/pathstyles.tex
@@ -1,3 +1,3 @@
-\chapter{Path styles and arrows}
+\chapter{Path styles and arrows in canvas module}
 \label{pathstyles}
 \centerline{\includegraphics{pathstyles}}
